--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&amp;display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="midia\front.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&amp;display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="midia\front.png" />
 
     <title>Parrot Card Game</title>
-</head>
-<body>
+  </head>
+  
+  <body>
     <header>
-        <h1>Parrot Card Game</h1>
-    </header>   
+      <h1>Parrot Card Game</h1>
+    </header>
     <main>
-        <ul>
-            <div class="container" onclick="turnSelectedCard(this)"">
-                <div class="carta atras"></div>
-                <div class="carta frente">
-                    <img src="midia\bobrossparrot.gif">
-                </div>
-            </div>
-        </ul>
+      <ul></ul>
     </main>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
